# Synthium

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  synthium
examples/: adder.v  subtractor.v
src/: lexer.cpp  main.cpp  parser.cpp  simulator.cpp  token.cpp
src/include/: ast.h  event.h  lexer.h  parser.h  simulator.h  token.h
tests/: CMakeLists.txt  lexer_tests.cpp  parser_tests.cpp
